Changed language to en

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -13,7 +13,7 @@
 <body>    
     <div class="main-content">        
         {{>header}}
-        <p>To get your weather</p>
+        <p>To get your weather please enter a location:</p>
 
         <form>
             <input placeholder="Location">
